refactor(common): remove all usage of Apache Commons libs